apps/base/nginx/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
  namespace: nginx
spec:
  stripPrefix:
    prefixes:
      - /nginx
