apps/base/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: nginx
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: nginx-strip-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - placeholder.example.com
      secretName: nginx-tls-secret
  rules:
    - host: placeholder.example.com
      http:
        paths:
          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
